--- a/miniproject/index.html
+++ b/miniproject/index.html
@@ -7,7 +7,9 @@
     <title>To-do list app</title>
   </head>
   <body>
+     <h1>Hello</h1>
     <div id="root"></div>
+   
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
